--- a/ImageLayer.html
+++ b/ImageLayer.html
@@ -6,6 +6,8 @@
     <title>访问 Map</title>
     <link rel="stylesheet" href="./8.2.0/theme/ol.css">
     <script src="./8.2.0/en/latest/ol/dist/ol.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/ol@v8.2.0/dist/ol.js"></script>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.2.0/ol.css"> -->
 </head>
 
 <body>
@@ -17,6 +19,15 @@
             layers: [
                 new ol.layer.Tile({
                     source: new ol.source.OSM()
+                }),
+                new ol.layer.Image({
+                    extent: [-13884991, 2870341, -7455066, 6338219],
+                    source: new ol.source.ImageWMS({
+                        url: 'https://ahocevar.com/geoserver/wms',
+                        params: {'LAYERS': 'topp:states'},
+                        ratio: 1,
+                        serverType: 'geoserver',
+                    }),
                 }),
             ],
             view: new ol.View({
